# auto-blob-saver

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  setup.py
auto_blob_saver/: __init__.py  __main__.py
auto_blob_saver/utils/: __init__.py  run_tsschecker.py
const/: __init__.py
src/: main.rs
