[package]
name = "auto_blob_saver"
version = "0.1.1"
authors = ["Helloyunho <yunho050840@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.10.1"
rand = "0.7.3"
job_scheduler = "*"
tokio = { version = "*", features = ["macros", "tcp", "dns", "io-util"] }
regex = "*"
dirs = "*"
clap = "*"
